--- a/SDL2-2.30.3/test/nacl/index.html
+++ b/SDL2-2.30.3/test/nacl/index.html
@@ -6,16 +6,17 @@ Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
 <head>
-  <meta http-equiv="Pragma" content="no-cache">
-  <meta http-equiv="Expires" content="-1">
-  <title>SDL NACL Test</title>
-  <script type="text/javascript" src="common.js"></script>
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="-1">
+    <title>SDL NACL Test</title>
+    <script type="text/javascript" src="common.js"></script>
 </head>
-<body data-width="640" data-height="640" data-name="sdl_app" data-tools="pnacl" data-configs="Debug Release" data-path="{tc}/{config}">
-  <h1>SDL NACL Test</h1>
-  <h2>Status: <code id="statusField">NO-STATUS</code></h2>
-  <!-- The NaCl plugin will be embedded inside the element with id "listener".
-      See common.js.-->
-  <div id="listener"></div>
+<body data-width="640" data-height="640" data-name="sdl_app" data-tools="pnacl" data-configs="Debug Release"
+      data-path="{tc}/{config}">
+<h1>SDL NACL Test</h1>
+<h2>Status: <code id="statusField">NO-STATUS</code></h2>
+<!-- The NaCl plugin will be embedded inside the element with id "listener".
+    See common.js.-->
+<div id="listener"></div>
 </body>
 </html>
